--- a/firebase.json
+++ b/firebase.json
@@ -18,5 +18,8 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "functions": {
+    "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
   }
 }
