--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
-    "firebase": "^10.12.2",
+    "@mui/material": "^5.18.0",
+    "firebase": "^10.14.1",
+    "firebase-tools": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0"
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
+    "typescript-eslint": "^8.50.1",
     "vite": "^5.3.1"
   }
 }
