--- a/functions/package.json
+++ b/functions/package.json
@@ -2,28 +2,22 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "build": "tsc"
+    "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "20"
+    "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.0.0",
-    "firebase-functions": "^5.0.0"
+    "firebase-admin": "^11.11.1",
+    "firebase-functions": "^4.9.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
-    "typescript": "^5.4.5"
+    "firebase-functions-test": "^3.2.0"
   },
   "private": true
 }
