--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^5.15.20",
+    "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
     "firebase": "^10.14.1",
     "firebase-tools": "^15.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.11.0"
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^7.11.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
