--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.18.0",
     "@mui/material": "^5.18.0",
+    "@tanstack/react-table": "^8.21.3",
     "firebase": "^10.14.1",
     "firebase-tools": "^15.1.0",
     "react": "^18.3.1",
